# claude-code-plugins

./: .gitignore  BENCHMARK.md  CODE_JUSTIFICATIONS.md  LICENSE  Makefile  OPTIMIZATION_SUMMARY.md  PROGRAM.md  README.md  devils_advocate.md  devils_advocate_program.md  fact_repository.md  hypotheses_iter21.md  hypotheses_iter22.md  hypotheses_iter23.md  hypotheses_iter24.md  hypotheses_iter25.md  hypotheses_iter26.md  hypotheses_iter27.md  impl_iter21.md  impl_iter22.md  impl_iter23.md  impl_iter24.md  impl_iter25.md  impl_iter26.md  impl_iter27.md  plan_iter21.md  plan_iter22.md  plan_iter23.md  plan_iter24.md  plan_iter25.md  plan_iter26.md  plan_iter27.md  pyproject.toml  research_iter21.md  research_iter22.md  research_iter23.md  research_iter24.md  research_iter25.md  research_iter26.md  research_iter27.md  (+16 more)
.claude/: CLAUDE.md  JOURNAL.md  JOURNAL_ARCHIVE.md
.claude-plugin/: marketplace.json
.claude/commands/: increment-plugin-version.md  increment-version.md  release.md
.github/workflows/: ci.yml
.ipynb_checkpoints/: README-checkpoint.md
auto-build-claw/: README.md
auto-build-claw/.claude-plugin/: plugin.json
auto-build-claw/agents/: orchestrator.md
auto-build-claw/commands/: run.md
auto-build-claw/docs/: CUSTOMIZATION.md  DESIGN-DECISIONS.md  DEVELOPMENT-JOURNEY.md
autobuild/: README.md
autobuild/.claude-plugin/: plugin.json
autobuild/agents/: orchestrator.md
autobuild/commands/: run.md
autobuild/docs/: ARCHITECTURE.md  CUSTOMIZATION.md  DESIGN-DECISIONS.md  DEVELOPMENT-JOURNEY.md
datascience/: README.md
datascience/.claude-plugin/: plugin.json
datascience/commands/: apply-footnotes.md  apply-progressbar.md  apply-prompt-technique.md  apply-style.md  challenge.md  fix-notebook.md  fix-project.md  new-project.md  notebook.md  review.md  style.md
devils-advocate/: README.md
devils-advocate/.claude-plugin/: plugin.json
devils-advocate/commands/: run.md
devils-advocate/examples/: executive-pushback-analysis.md  kg-builder-design-analysis.md  kg-builder-full-analysis.md  readme-rewrite-analysis.md
docs/: grounding_forensics_kolomolo_proposals.md  grounding_improvements_hypothesis.md  lost_in_the_middle_grounding_analysis.md
docs/marketing/: hn-post-svg-infographics.md  hn-post.md  reddit-post.md  x-thread.md
docs/medium/: article_01_pull-based-workflow-enforcement.md  article_01b_pull-based-workflow-enforcement.md  article_02_grounding_analysis.md  article_02_svg-infographics.md  devils_advocate.md  fact_repository.md
document-processing/: README.md
document-processing/.claude-plugin/: plugin.json
document-processing/commands/: run.md  update.md  validate-many.md  validate.md
journal/: README.md
journal/.claude-plugin/: plugin.json
journal/commands/: archive.md  create.md  update.md
references/grounding-optimisation/: README.md
scripts/: bench_agreement_gap.py  calibrate_cv.py
showcase/: README.md
src/stellars_claude_code_plugins/: __init__.py  config.py  config_document_processing.yaml
stellars_claude_code_plugins/: __init__.py  config.py  config_document_processing.yaml  journal_tools.py
stellars_claude_code_plugins/autobuild/: orchestrator.py
stellars_claude_code_plugins/document_processing/: __init__.py  cli.py  config.py  entity_check.py  grounding.py  semantic.py  settings.py
stellars_claude_code_plugins/engine/: __init__.py  fsm.py  model.py  orchestrator.py
stellars_claude_code_plugins/svg_tools/: calc_connector.py  calc_empty_space.py  calc_geometry.py  calc_primitives.py  charts.py  check_alignment.py  check_collisions.py  check_connectors.py  check_contrast.py  check_css.py  check_overlaps.py  check_svg_valid.py  cli.py  drawio_shapes.py  gen_backgrounds.py  (+3 more)
svg-infographics/: README.md  TOOLBOX.md
tests/: _gate_helpers.py  conftest.py  test_ci_imports.py  test_config.py  test_document_processing.py  test_fsm.py  test_journal_tools.py  test_model.py  test_orchestrator.py  test_svg_tools.py
(+147 files in other folders)
