[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellars_claude_code_plugins"
version = "1.0.18"
description = "Claude Code plugins for autonomous development workflows"
authors = [
    { name = "Stellars Henson", email = "konrad.jelen@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bezier",
    "fonttools",
    "numpy",
    "pillow",
    "pygal",
    "pyyaml",
    "scipy",
    "shapely",
    "svgelements>=1.9",
    "tiktoken",
    "transitions",
]

[project.optional-dependencies]
dev = [
    "build",
    "ipython",
    "pip",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
]

[project.scripts]
orchestrate = "stellars_claude_code_plugins.autobuild.orchestrator:main"
svg-infographics = "stellars_claude_code_plugins.svg_tools.cli:main"

[project.urls]
Homepage = "https://github.com/stellarshenson/claude-code-plugins"
Repository = "https://github.com/stellarshenson/claude-code-plugins"
Issues = "https://github.com/stellarshenson/claude-code-plugins/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"stellars_claude_code_plugins.autobuild" = ["resources/*.yaml"]

[tool.setuptools.packages.find]
where = ["."]
include = ["stellars_claude_code_plugins*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 99
src = ["stellars_claude_code_plugins"]
include = ["pyproject.toml", "stellars_claude_code_plugins/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["stellars_claude_code_plugins"]
force-sort-within-sections = true
