[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellars_claude_code_plugins"
version = "1.1.7"
description = "Claude Code plugins for autonomous development workflows"
authors = [
    { name = "Stellars Henson", email = "konrad.jelen@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bezier",
    "fonttools",
    "numpy",
    "pillow",
    "playwright",
    "pygal",
    "pyyaml",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "scipy",
    "shapely",
    "svgelements>=1.9",
    "tiktoken",
    "transitions",
]

[project.optional-dependencies]
dev = [
    "build",
    "ipython",
    "pip",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
]
semantic = [
    "torch>=2.0",
    "transformers>=4.40",
    "faiss-cpu>=1.7",
    "pyarrow>=14.0",
]

[project.scripts]
orchestrate = "stellars_claude_code_plugins.autobuild.orchestrator:main"
svg-infographics = "stellars_claude_code_plugins.svg_tools.cli:main"
journal-tools = "stellars_claude_code_plugins.journal.journal_tools:main"
render-png = "stellars_claude_code_plugins.svg_tools.render_png:main"
document-processing = "stellars_claude_code_plugins.document_processing.cli:main"

[project.urls]
Homepage = "https://github.com/stellarshenson/claude-code-plugins"
Repository = "https://github.com/stellarshenson/claude-code-plugins"
Issues = "https://github.com/stellarshenson/claude-code-plugins/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"stellars_claude_code_plugins" = ["config_*.yaml"]
"stellars_claude_code_plugins.autobuild" = ["resources/*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["stellars_claude_code_plugins*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/stellars_claude_code_plugins/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["stellars_claude_code_plugins"]
force-sort-within-sections = true
